--- a/ccachi/src/main/resources/application.properties
+++ b/ccachi/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ssafit?serverTimezone=UTC&useU
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=ssafit
 spring.datasource.password=ssafit
+
+mybatis.type-aliases-package=com.ssafit.ccachi.user.dao
+mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.type-handlers-package=com.ssafit...model.typeHandler
