--- a/ccachi/src/main/resources/application.properties
+++ b/ccachi/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=ssafit
 spring.datasource.password=ssafit
 
-mybatis.type-aliases-package=com.ssafit.ccachi.user.dao
+mybatis.type-aliases-package=com.ssafit.ccachi.*.Entity, com.ssafit.ccachi.*.dto
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 #mybatis.type-handlers-package=com.ssafit...model.typeHandler
+
+spring.jpa.properties.hibernate.bytecode.use_reflection_optimizer=false
