--- a/ccachi/pom.xml
+++ b/ccachi/pom.xml
@@ -87,9 +87,14 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
+<!--            <version>RELEASE</version>-->
+<!--            <scope>compile</scope>-->
         </dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+<!--			<version>5.6.0.Final</version>-->
+		</dependency>
     </dependencies>
 
 	<build>
