--- a/ccachi/src/main/resources/application.properties
+++ b/ccachi/src/main/resources/application.properties
@@ -9,3 +9,4 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #mybatis.type-handlers-package=com.ssafit...model.typeHandler
 
 spring.jpa.properties.hibernate.bytecode.use_reflection_optimizer=false
+spring.profiles.include=jwt
