--- a/ccachi/src/main/resources/application.properties
+++ b/ccachi/src/main/resources/application.properties
@@ -6,7 +6,14 @@ spring.datasource.password=ssafit
 mybatis.type-aliases-package=com.ssafit.ccachi.*.model.Entity, com.ssafit.ccachi.*.model.dto
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.org.mybatis.spring = DEBUG
 #mybatis.type-handlers-package=com.ssafit...model.typeHandler
 
 spring.jpa.properties.hibernate.bytecode.use_reflection_optimizer=false
 spring.profiles.include=jwt
+
+pagehelper.helper-dialect=mysql
+pagehelper.reasonable=true
+#pagehelper.support-methods-arguments=true
+spring.main.allow-circular-references=true
+
